// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/stories/StoriesPanel default 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-108o064"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <h3
        class="css-ht6bk4"
      />
    </a>
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-oczsoj"
  >
    <input
      class="css-b9cqpx"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots ui/stories/StoriesPanel storiesHierarchies exists but is empty 1`] = `
<div
  class="css-3dwd22"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-108o064"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <h3
        class="css-ht6bk4"
      />
    </a>
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-oczsoj"
  >
    <input
      class="css-b9cqpx"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots ui/stories/StoriesPanel when open on mobile device 1`] = `
<div
  class="css-nk32ej"
>
  <div
    class="css-5xz1i6"
  >
    <a
      class="css-108o064"
      href=""
      rel="noopener noreferrer"
      target="_blank"
    >
      <h3
        class="css-ht6bk4"
      />
    </a>
    <button
      class="css-i6e0jg"
    >
      ⌘
    </button>
  </div>
  <div
    class="css-oczsoj"
  >
    <input
      class="css-b9cqpx"
      name="filter-text"
      placeholder="Filter"
      type="text"
      value=""
    />
  </div>
</div>
`;
